<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Markod</string>
    <string name="action_settings">Settings</string>
    <string name="scan">Scan</string>
    <string name="search_text">Search Text</string>
    <string name="search_hint">Enter product name..</string>
    <string name="search">Search</string>
    <string name="location">Locate</string>
    <string name="detective">Detective</string>
    <string name="products_text">Use Add button to spy a product</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="comma">,</string>
    <string name="logtag">MDlog</string>
    <string name="setProductPrice">Set a price for the product</string>
    <string name="title_activity_market_select">Choose a Market</string>

    <string name="facebook_app_id">897460156962618</string>
    <string name="title_activity_login">Login</string>

    <string name="hello_world">Hello world!</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="loginBtn">Login</string>
    <string name="str_tv_click_to_register">New to Markod ! Click to register</string>

    <!-- G+ button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="action_search">Search</string>
    <string name="action_location_found">Found</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_help">Help</string>
    <string name="action_check_updates">Update</string>

    <!-- Style and Theme -->
    <string name="title_activity_base">BaseActivity</string>
    <string name="main_title">Welcome to Markod</string>
    <string name="login_title">Please Login</string>
    <string name="noconn_tryagain">No Interntet Connection!! Try again later..</string>
    <string name="noconn_tryagain_btn">Check Connection</string>
    <string name="title_activity_spymarket">Spy Market</string>
    <string name="send">Send</string>
    <string name="dialog_login_title">Logging..</string>
    <string name="dialog_login_msg">Please wait.. Logging into markod.com</string>
    <string name="markets_progress">Loading</string>
    <string name="markets_progress_message">Searching nearby markets..</string>
    <string name="please_wait">Please wait..</string>
    <string name="spymarket_sharing_title">Sharing products..</string>
    <string name="spymarket_product_title">Searching product..</string>
    <string name="title_activity_profile">Profile</string>
    <string name="action_profile">Profile</string>
    <string name="select_this_market">Select this market for spying?</string>
    <string name="txt_scan_button">Scan</string>
    <string name="txt_send_button">Send</string>
    <string name="total_points">Total Points</string>
    <string name="new_market_points">New Market</string>
    <string name="new_products_points">New Products</string>
    <string name="update_products_points">Product Updates</string>
    <string name="title_points_earned">Points You Earned !!</string>
    <string name="hint_product_search">Enter Product Name</string>
    <string name="str_searching_products">Searching products</string>
    <string name="str_searching_products_nearby_markets">Products are being searched in nearby Markets</string>
    <string name="str_search_results">Search Results</string>
    <string name="str_getting_best_prices">Getting best prices..</string>
    <string name="str_missing_products">Missing products !</string>
    <string name="str_btn_zap">Markod</string>
    <string name="str_btn_markod">Markodit</string>
    <string name="str_btn_campains">Scan</string>
    <string name="str_app_name">Markod</string>
    <string name="str_btn_spy_market">Spy Market</string>
    <string name="str_btn_campaign">Share Campaign</string>
    <string name="str_btn_declare_product">Add Product</string>
    <string name="str_btn_profile">Profile</string>
    <string name="title_activity_add_product">Add Product</string>
    <string name="str_mock_barcode">XXX-XXXXX-XXXX-X</string>
    <string name="str_btn_sendProduct">Send</string>
    <string name="str_hint_productDesc">Enter description of product</string>
    <string name="str_take_photo_please">Take a photo of the product</string>
    <string name="str_send_product_please_wait">Sending product info..</string>
    <string name="title_activity_simple_scanner">SimpleScannerActivity</string>
    <string name="str_title_profile">Profile</string>
    <string name="str_btn_shoplists">My Shopping Lists &amp; Favourites</string>
    <string name="str_btn_catalog">Points Catalog</string>
    <string name="title_activity_shop_lists">ShopLists &amp; Favorites</string>
    <string name="str_btn_add_new_list">Create New Shop List</string>
    <string name="str_title_your_shoplists">Your Shopping Lists</string>
    <string name="str_dialog_title_newShoplist">New Shoplist</string>
    <string name="str_hint_new_shoplist">kitchen needs</string>
    <string name="str_menu_search_shoplist">Search in Markets</string>
    <string name="str_menu_delete_shoplist">Delete</string>
    <string name="str_menu_delete_shoplist_item">Remove from list</string>
    <string name="str_menu_add_product">Add Product</string>
    <string name="str_toast_product_added_into_shoplist">is added into your shoplist.</string>
    <string name="str_hint_dialog_new_shoplist_name">Ex. Everyday Needs</string>
    <string name="str_dialog_msg_new_shoplist">Enter a name for your shoplist</string>
    <string name="str_menu_search_product">Search Product in Markets</string>
    <string name="str_dialog_title_delete_shoplist">Delete</string>
    <string name="str_are_you_sure">Are you sure ?</string>
    <string name="str_yes">YES</string>
    <string name="str_no">NO</string>
    <string name="str_toast_product_already_added">Product is already added into the shoplist</string>
    <string name="str_hint_add_new_shoplist">Your shoplists are empty\nuse  +  to create a new shoplist</string>
    <string name="str_btn_save_changes">SAVE CHANGES</string>
    <string name="str_progress_saving_user_changes">Saving your changes..</string>
    <string name="str_toast_no_valid_user">No User profile found !!</string>
    <string name="str_title_shoplists_activity">Your Shopping Lists</string>
    <string name="menu_search">Search</string>
    <string name="str_app_welcome">Welcome to Markod</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="speak_now">Speak Now</string>
    <string name="title_activity_search_reveal">SearchRevealActivity</string>
    <string name="str_hint_product_searchbox">product name</string>
    <string name="title_activity_results">Search Results</string>
    <string name="str_points">Points</string>
    <string name="str_nav_prfile">Profile</string>
    <string name="str_nav_profile">Profile</string>
    <string name="str_nav_login">Log In</string>
    <string name="str_nav_shoplists">Shop Lists</string>
    <string name="str_nav_fav">Favorites</string>
    <string name="str_nav_settings">Settings</string>
    <string name="str_nav_help"><![CDATA[Help & Feedback]]></string>
    <string name="str_nav_declare_product">Product Declare</string>
    <string name="str_ads_search">Use \"Search\" to search a product in nearby markets.\nWhere it is sold ? How much ?</string>
    <string name="str_ads_account">Login to search multiple products\nGet notifications on price changings\nWatch your favorite markets..\nAnd more..</string>
    <string name="str_ads_spy">Be a Markod Agent !!\nSpy a market, share product prices and earn money !!</string>
    <string name="str_btn_show_in_maps">Maps</string>
    <string name="str_btn_order_to_market">Order</string>
    <string name="title_activity_register">Register</string>
    <string name="str_btn_register">Register</string>
    <string name="str_btn_login">Log in</string>
    <string name="str_btn_logout">Log out</string>
    <string name="str_et_email">E-mail</string>
    <string name="str_et_lastname">Last name</string>
    <string name="str_et_firstname">First name</string>
    <string name="str_et_password">Password</string>
    <string name="str_tv_firstname_err">Enter a valid name.</string>
    <string name="str_tv_email_err">Enter a valid email address</string>
    <string name="str_tv_password_err">Choose a valid password.</string>
    <string name="str_dialog_msg_register_ok">Success!\nCheck your email\nClick to Verify button to activate your account.</string>
    <string name="str_dialog_msg_register_failed">An Error occured. Try later..</string>
    <string name="str_tv_use_social">Use your social account to sign in</string>
    <string name="str_dialog_msg_login_error">Email or Password incorrect !</string>
    <string name="str_dialog_msg_login_ok">Welcome back, Login successful !</string>
    <string name="str_msg_login_failed">Login failed! Try later..</string>
    <string name="str_tv_forget_password">Forgot your password ?</string>
    <string name="str_msg_changes_saved">Your changes are successfully saved.</string>
    <string name="str_msg_err_server">Server error ! Try again later..</string>
    <string name="str_msg_product_declare_succ">Success ! Points you have earned: </string>
    <string name="str_msg_barcode_scan_fail">No Barcode is scanned ! Try again..</string>
    <string name="str_msg_err_no_user">No User profile found !</string>
    <string name="str_err_no_conn">No Internet connection available !</string>
    <string name="str_dialog_msg_cong">Congratulations !</string>
    <string name="str_ok">OK</string>
    <string name="str_dialog_msg_not_verified_yet">Account not verified yet! Check your email..</string>
    <string name="str_dialog_msg_no_such_user">No user found! Try to register..</string>
    <string name="str_menu_product_reprice">Update the price</string>
    <string name="str_menu_remove_product">Remove</string>
    <string name="str_you_are_here">You are here</string>
    <string name="str_no_camera">No Camera found !</string>
    <string name="str_no_search_results">No Result Found !</string>
</resources>