<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:appcompat="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.dopamin.markod.activity.ShopListsActivity">

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_create_new_shoplist"
        android:title="@string/str_btn_add_new_list"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search"
        android:title="@string/menu_search"
        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        appcompat:showAsAction="ifRoom"/>
</menu>
