<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dopamin.markod.activity.AddProductActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/id_photo"
            android:background="@color/gray"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_width="240dp"
            android:layout_height="160dp" />

        <TextView
            android:id="@+id/id_txt_take_photo"
            android:text="@string/str_take_photo_please"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/id_take_photo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="bottom|right"
            android:src="@drawable/ico_take_product_photo"
            android:layout_marginBottom="8dp"/>
    </FrameLayout>

    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_scannedCode"
            android:textSize="24sp"
            android:background="@drawable/box"
            android:text="@string/str_mock_barcode"
            android:padding="4dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/id_btn_scanBarcode"
            android:layout_marginLeft="5dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end|center_vertical"
            android:text="SCAN"
            android:src="@drawable/ico_detective"/>

    </LinearLayout>

    <EditText
        android:id="@+id/id_etxt_productDesc"
        android:hint="@string/str_hint_productDesc"
        android:textColorHint="@color/gray"
        android:inputType="textCapSentences"
        android:textSize="20sp"
        android:padding="4dp"
        android:visibility="gone"
        android:layout_marginTop="8dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/box"
        android:maxLength="32"
        android:singleLine="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/id_btn_sendProduct"
        android:visibility="gone"
        android:text="@string/str_btn_sendProduct"
        android:textSize="24sp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        style="@style/btnStyleOrange"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/id_img_barcode"
        android:visibility="gone"
        android:background="@color/gray"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
