<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dopamin.markod.activity.ShopListsActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/product_lv_item"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="@color/red"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/id_layout_search"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            android:orientation="horizontal">

            <Button
                android:id="@+id/id_btn_back_from_search"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="start|center_vertical"
                android:background="@drawable/ic_action_back" />

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <AutoCompleteTextView
                    android:id="@+id/id_ac_tv_productAutoSearch"
                    android:padding="4dp"
                    android:singleLine="true"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:hint="@string/hint_product_search"
                    android:textColorHint="@color/white"
                    android:layout_gravity="center_vertical"/>

                <Button
                    android:id="@+id/id_btn_delete"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="end|center_vertical"
                    android:background="@drawable/ic_action_cancel" />
            </FrameLayout>
        </LinearLayout>

        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/id_layout_top"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:background="@color/red"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/id_btn_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="start|center_vertical"
                android:background="@drawable/ic_action_back" />

            <TextView
                android:id="@+id/app_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/str_title_profile"
                android:textColor="@color/white"
                android:padding="10dp"
                android:textSize="24dp" />
        </FrameLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="5dip"
        android:background="@drawable/drop_shadow" />

    <TextView
        android:gravity="center"
        android:text="@string/str_title_your_shoplists"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ExpandableListView
        android:id="@+id/lv_exp_shoplists"
        android:padding="5dp"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:choiceMode = "singleChoice"
        android:listSelector="@drawable/listview_selector" />

</LinearLayout>
