<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#F44336"
        android:padding="10dp"
        android:orientation="horizontal" >

        <ImageView
            android:src="@drawable/ico_market"
            android:layout_width="48dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/spymarket_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/white"
            android:paddingLeft="10dp"
            android:textSize="32dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/spymarket_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:textColor="@color/gray"
        android:textStyle="italic"
        android:textSize="16dp"
        android:text="@string/products_text" />

    <ListView
        android:id="@+id/productList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:divider="@color/markod_bg_color"
    	android:dividerHeight="4dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#CFD8DC"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/black"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#CFD8DC"
            android:padding="5dp"
            android:orientation="horizontal" >

            <at.markushi.ui.CircleButton
                android:id="@+id/send_button"
                android:layout_width="72dip"
                android:layout_height="72dip"
                android:layout_gravity="start"
                android:padding="5dp"
                android:src="@drawable/ico_send_products"
                app:cb_color="#CFD8DC"
                app:cb_pressedRingWidth="8dip" />

            <TextView
                android:id="@+id/tv_send_products"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="24dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/txt_send_button" />

            <TextView
                android:visibility="invisible"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="24dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/txt_scan_button" />

            <at.markushi.ui.CircleButton
                android:id="@+id/scan_button"
                android:layout_width="72dip"
                android:layout_height="72dip"
                android:layout_alignParentRight="true"
                android:padding="5dp"
                android:src="@drawable/ico_barcode_scan"
                app:cb_color="#CFD8DC"
                app:cb_pressedRingWidth="8dip" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>